--- a/index.html
+++ b/index.html
@@ -18,34 +18,57 @@
                 <a href="#"><img src="assets/img/uk.png" alt=""></a>
             </div>
             <div id="sep"></div>
-            <div id="logo"></div>
+            <div id="logo">
+                <svg height="170" width="170">
+                    <circle class="circle" cx="70" cy="70" r="68" stroke="#030" stroke-width="4" fill-opacity="0" />
+                </svg>
+            </div>
         </header>
+        <!-- bei skills: https://codepen.io/kyledws/pen/VwKmVv -->
         <div id="content">
             <nav>
                 <input class="menu-btn" type="checkbox" id="menu-btn" />
                 <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
                 <ul>
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
+                    <li class="active"><a href="index.html">About</a></li>
                     <li><a href="#">Skills</a></li>
                     <li><a href="#">References</a></li>
+                    <li><a href="#">Future projects</a></li>
                 </ul>
             </nav>
             <main>
+                <img src="assets/img/passbild.jpg" alt="" class="main mobile"> 
+                <div class="vline mobile"></div>
                 <article>
                     <h3>Home</h3>
-                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, 
-                        sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est 
+                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore 
+                        et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea 
                         Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore 
                         et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, 
                         no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod 
                         tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. 
-                        Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. 
-                        Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis 
-                        at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. 
-                        Lorem ipsum dolor sit amet,</p>
+                        Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+                </article>
+                <article>
+                    <h4>Other</h4>
+                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore 
+                        et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea 
+                        Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore 
+                        et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, 
+                        no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod 
+                        tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. 
+                        Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
                 </article>
             </main>
+            <aside>
+                <ul class="icons">
+                    <li><a href="https://www.pinterest.de/tilorabs/" class="fa fa-pinterest" target="_blank"></a></li>
+                    <li><a href="https://www.instagram.com/tilorabs/" class="fa fa-instagram" target="_blank"></a></li>
+                    <li><a href="https://www.facebook.com/tilo.rabs" class="fa fa-facebook-f" target="_blank"></a></li>
+                    <li><a href="https://twitter.com/streckenweise" class="fa fa-twitter" target="_blank"></a></li>
+                    <li><a href="https://www.xing.com/profile/Tilo_Rabs" class="fa fa-xing" target="_blank"></a></li>
+                </ul>
+            </aside>
         </div>
     </div>
 </body>
